# choral-v2

./: .gitignore  BUILD_SCRIPTS_README.md  BUILD_SYSTEM_SUMMARY.md  BUILD_WITH_JUCE.sh  CHANGELOG.md  CHOIR_V2_ALL_FORMATS_ENABLED.md  CHOIR_V2_STATUS.md  CMakeLists.txt  CMakeLists.txt.backup  CONTRIBUTING.md  DELIVERABLES_REPORT.md  DEPLOYMENT_PACKAGE_SUMMARY.md  DIRECTORY_STRUCTURE.md  DSP_VERIFICATION_PLAN.md  FINAL_DSP_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  PHONEMEDB_PUREDSP_REFACTOR.md  PLUGIN_BUILD_GUIDE.md  PLUGIN_IMPLEMENTATION_SUMMARY.md  PURE_DSP_SETUP_COMPLETE.md  QUICK_START.sh  README.md  README_PLUGIN.md  REPOSITORY_INITIALIZATION_COMPLETE.md  ROADMAP.md  SPECIFICATION.md  SPECTRAL_ENHANCER_IMPLEMENTATION_SUMMARY.md  SYNTHESIS_REFACTOR_REPORT.md  VERIFY_BUILD.sh  build-and-test-dsp.sh  build_all_formats.sh  build_plugin.sh  create_placeholders.sh  test_formant_resonator  test_subharmonic_generator  verify_plugins.sh
.beads/: issues.jsonl
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  BUILD_INSTRUCTIONS.md  BUILD_SUMMARY.md  CHOIR_V2_ENGINE_IMPLEMENTATION_COMPLETE.md  CHOIR_V2_FIXES_SUMMARY.md  EXAMPLES.md  G2P_PuredSP_MIGRATION_SUMMARY.md  G2P_QUICK_REFERENCE.md  PARAMETER_PRESET_IMPLEMENTATION_REPORT.md  PARAMETER_QUICK_REFERENCE.md  PLUGIN_FORMATS.md  REQUIREMENTS.md  SUBHARMONIC_GENERATOR_PLL_FIX.md
docs/api/: ReverbEffect_API.md
docs/development/: FORMANT_RESONATOR_COMPARISON.md  FORMANT_RESONATOR_CRITICAL_FIX.md  G2P_ENGINE_IMPLEMENTATION_SUMMARY.md  VOICE_ALLOCATOR_IMPLEMENTATION_SUMMARY.md
docs/dsp/: LINEAR_SMOOTHER_IMPLEMENTATION.md  LinearSmoother_Usage_Guide.md  ReverbEffect.md  SPECTRAL_ENHANCER_FIX_REPORT.md
docs/examples/: reverb_integration_example.cpp
docs/implementation/: VOICE_MANAGER_IMPLEMENTATION.md
docs/reports/: ReverbEffect_Implementation_Report.md
include/dsp/: ChoirV2DSPModules.h  ChoirV2PureDSP.h  PureDSPFFT.h
include/dsp/core/: G2PEngine.h  LanguageLoader.h  PhonemeDatabase.h  PhonemeTypes.h
include/dsp/synthesis/: DiphoneSynthesisMethod.h  FormantSynthesisMethod.h  ISynthesisMethod.h  SubharmonicSynthesisMethod.h
include/plugin/: ChoirV2Editor.h  ChoirV2Processor.h
languages/: english.json  klingon.json  latin.json  throat_singing.json
presets/: Cathedral_Choir.preset.json  Chamber_Choir.preset.json  Ethereal_Choir.preset.json  FACTORY_PRESET_INDEX.md  GENDER_PRESET_GUIDE.md  Gospel_Choir.preset.json  README.md  Synth_Choir.preset.json
presets/factory/: Alien Chorus.choirv2  Arabic_1:_Quran_Recitation.choirv2  Bass Profundo.choirv2  Chamber Choir.choirv2  Child_1:_Boy_Soprano.choirv2  Child_2:_Girl_Soprano.choirv2  Child_3:_Children's_Choir.choirv2  Child_4:_Choirboys.choirv2  Chinese_1:_Beijing_Opera.choirv2  Chinese_2:_Folk_Choir.choirv2  Chinese_3:_Temple_Chant.choirv2  Classical_1:_Gregorian_Chant.choirv2  Classical_2:_Bach_Chorale.choirv2  Classical_3:_Renaissance_Polyphony.choirv2  Classical_4:_Romantic_Era_Choir.choirv2  Classical_5:_Orthodox_Chant.choirv2  Default Choir.choirv2  English_1:_Pop_Choir.choirv2  English_2:_Gospel_Choir.choirv2  English_3:_Barbershop_Quartet.choirv2  Ethereal Pad.choirv2  Female_1:_Soprano.choirv2  Female_2:_Mezzo-Soprano.choirv2  Female_3:_Alto.choirv2  Female_4:_Coloratura.choirv2  Female_5:_SSAA_Choir.choirv2  Female_6:_Pop_Soprano.choirv2  Female_7:_Folk_Alto.choirv2  Female_8:_Jazz_Soprano.choirv2  French_1:_Chorale_Francaise.choirv2  German_1:_Lieder_Choir.choirv2  Hebrew_1:_Synagogue_Chant.choirv2  Japanese_1:_Noh_Theater.choirv2  Japanese_2:_Pop_Group.choirv2  Japanese_3:_Buddhist_Chant.choirv2  Klingon_1:_Battle_Chant.choirv2  Klingon_2:_Opera_Solo.choirv2  Klingon_3:_Council_Chamber.choirv2  Large Ensemble.choirv2  Latin_1:_Requiem_Mass.choirv2  (+52 more)
reports/: formant_synthesis_implementation_report.json
scripts/: additional_presets.py  build_aax.sh  build_all.sh  build_au.sh  build_auv3.sh  build_clap.sh  build_lv2.sh  build_standalone.sh  build_vst3.sh  generate_gender_presets.py  generate_presets.py
src/core/: ChoirV2Engine.cpp  ChoirV2Engine.h  G2PEngine.cpp  G2PEngine.h  LanguageLoader.cpp  LanguageLoader.cpp.bak2  LanguageLoader.h  Phoneme.h  Phoneme.h.deprecated  PhonemeDatabase.cpp  PhonemeDatabase.cpp.bak3  PhonemeDatabase.h  PresetManager.cpp  PresetManager.h  Voice.cpp  Voice.h  VoiceAllocator.cpp  VoiceAllocator.h  VoiceManager.cpp  VoiceManager.h
src/dsp/: ChoirV2PureDSP.cpp  ChoirV2PureDSP_Parameters.cpp  FormantResonator.cpp  FormantResonator.h  GlottalSource.cpp  GlottalSource.h  LinearSmoother.cpp  LinearSmoother.h  ReverbEffect.cpp  ReverbEffect.h  SpectralEnhancer.cpp  SpectralEnhancer.h  SubharmonicGenerator.cpp  SubharmonicGenerator.h
src/dsp/core/: G2PEngine.cpp  LanguageLoader.cpp  PhonemeDatabase.cpp
src/dsp/synthesis/: DiphoneSynthesisMethod.cpp  FormantSynthesisMethod.cpp  SubharmonicSynthesisMethod.cpp
src/plugin/: ChoirV2Editor.cpp  ChoirV2Editor.h  ChoirV2Processor.cpp  ChoirV2Processor.h
src/synthesis/: DiphoneSynthesis.cpp  DiphoneSynthesis.h  FormantSynthesis.cpp  FormantSynthesis.h  ISynthesisMethod.cpp  ISynthesisMethod.h  SubharmonicSynthesis.cpp  SubharmonicSynthesis.h
src/utils/: LockFreeQueue.h  MemoryPool.cpp  MemoryPool.h  SIMDHelpers.cpp  SIMDHelpers.h
tests/: CMakeLists.txt  TEST_FILES_QUICK_REFERENCE.md  TEST_SUITE_DELIVERY_SUMMARY.md  TEST_SUITE_DOCUMENTATION.md  dsp_test_harness.cpp
tests/benchmark/: benchmark_dsp.cpp
tests/dsp/: CMakeLists.txt  README.md  SpectralEnhancerTest.cpp  build_and_test.sh
tests/integration/: test_multilingual_support.cpp  test_plugin_functionality.cpp  test_synthesis_pipeline.cpp
tests/unit/: test_diphone_synthesis.cpp  test_formant_resonator.cpp  test_formant_synthesis.cpp  test_g2p_engine.cpp  test_language_loader.cpp  test_linear_smoother.cpp  test_phonedatabase_puredsp.cpp  test_phoneme_database.cpp  test_preset_manager.cpp  test_puredsp_g2p.cpp  test_reverb_effect.cpp  test_subharmonic_generator.cpp  test_subharmonic_synthesis.cpp  test_voice_allocator.cpp  test_voice_manager.cpp
